--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wap/cli",
-  "version": "0.0.0",
+  "version": "0.0.0-alpha.0",
   "description": "Web Asset Packs",
   "bin": "lib/cli.js",
   "main": "lib/api.js",
@@ -30,7 +30,7 @@
     "@types/yargs": "15.0.4",
     "@typescript-eslint/eslint-plugin": "2.29.0",
     "@typescript-eslint/parser": "2.29.0",
-    "@wap/core": "git+https://github.com/webassetpack/core.git",
+    "@wap/core": "file:../core",
     "eslint": "6.8.0",
     "jasmine-spec-reporter": "5.0.1",
     "nyc": "15.0.1",
