--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@types/yargs": "15.0.4",
     "@typescript-eslint/eslint-plugin": "2.29.0",
     "@typescript-eslint/parser": "2.29.0",
-    "@wap/core": "file:../core",
+    "@wap/core": "git+https://github.com/webassetpack/core.git",
     "eslint": "6.8.0",
     "jasmine-spec-reporter": "5.0.1",
     "nyc": "15.0.1",
