--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@totalpave/interfaces": "1.0.0",
     "@types/node": "13.13.2",
+    "tslib": "1.11.1",
     "yargs": "15.3.1"
   }
 }
