--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wap/cli",
-  "version": "0.0.0-alpha.0",
+  "version": "0.0.1",
   "description": "Web Asset Packs",
   "bin": {
     "wap": "./lib/cli.js"
