--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wap/cli",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Web Asset Packs",
   "bin": {
     "wap": "./lib/cli.js"
@@ -32,7 +32,6 @@
     "@types/yargs": "15.0.5",
     "@typescript-eslint/eslint-plugin": "2.29.0",
     "@typescript-eslint/parser": "2.29.0",
-    "@wap/core": "0.0.1",
     "eslint": "6.8.0",
     "jasmine-spec-reporter": "5.0.2",
     "nyc": "15.0.1",
@@ -47,6 +46,7 @@
     "mime-types": "2.1.27",
     "pako": "1.0.11",
     "tslib": "2.0.0",
-    "yargs": "15.3.1"
+    "yargs": "15.3.1",
+    "@wap/core": "0.0.1"
   }
 }
